--- a/JS/review-2016-11-23.md
+++ b/JS/review-2016-11-23.md
@@ -1,4 +1,4 @@
-1. 描述以下 js里面的事件流
+zs1. 描述以下 js里面的事件流
 ```
 DOM2级事件模型中规定了事件流的三个阶段：捕获阶段、目标阶段、冒泡阶段，低版本IE（IE8及以下版本）不支持捕获阶段
 
@@ -22,6 +22,8 @@ target.attachEvent(event, listener);
 target.detachEvent(event,listener);
 ```
 
+绑定的匿名函数是无法被撤销的
+
 3. 事件的委托（代理 Delegated Events）的原理以及优缺点
 
 ```
@@ -35,5 +37,171 @@ target.detachEvent(event,listener);
  事件代理的应用常用应该仅限于上述需求下，如果把所有事件都用代理就可能会出现事件误判，即本不应用触发事件的被绑上了事件。
 ```
 
+例子：
+```js
+var toolbar = document.querySelector('#menu');
+toolbar.addEventListener('click', function(e){
+
+  var target = e.target;
+  if (!target.classList.contains('active')){
+    target.classList.add('active');
+  } else {
+    target.classList.remove('active');
+  }
+}, false)
+```
+
+4. 手写原生js实现事件代理，并要求兼容浏览器
+
+```js
+function delegateEvent(element, toTarget, type, fn) {
+  if (element.addEventListener) {
+    element.addEventListener(type, eventFn)
+  } else {
+    element.attach('on' + type, eventFn)
+  }
+
+  // 解决了每个listener 里面都要判断一次的
+  function eventFn(e) {
+    var e = e || window.event;
+    var target = e.target || e.srcElement;
+    if (matchTotarget(target, toTarget) {
+      if (fn) {
+        fn.call(taget, e)
+      }
+    })
+  }
+}
+
+function matchTotarget(taget, toTarget) {
+  // use id
+  if (toTarget.charAt(0) === '#') {
+    return target.id === toTarget.slice(1);
+  }
+
+  // use class
+  if (toTarget.charAt(0) === '1') {
+    return taget.className.indexOf(toTarget.slice(1)) > -1;
+  }
+
+  return target.tagName.toLowerCase()  === toTarget.toLowerCase();
+
+}
+
+
+//调用
+var odiv = document.getElementById("oDiv");
+delegateEvent(odiv,"a","click",function(){
+    alert("1");
+})
+```
+
+5. 实现事件模型
+
+```
+大致实现思路就是创建一个类或是匿名函数，在bind和trigger函数外层作用域创建一个字典对象，用于存储注册的事件及响应函数列表，bind时，如果字典没有则创建一个，key是事件名称，value是数组，里面放着当前注册的响应函数，如果字段中有，那么就直接push到数组即可。trigger时调出来依次触发事件响应函数即可。
+```
+
+简单实现
+
+```js
+var Emitter = function () {
+  this._listeners = {};
+}
+
+// _listener = {
+//     "click": [func1, func2],
+//     "custom": [func3],
+//     "defined": [func4, func5, func6]
+// }
+
+// 注册事件
+Emitter.prototype.on = function (eventName, callback) {
+  // listeners，用来暂存注册函数
+  var listeners = this._listeners[eventName] || [];
+  listeners.push(callback);
+  this._listeners[eventName] = listener;
+}
+
+// 触发事件
+Emitter.prototype.emit = function(eventName) {
+  var args = Array.prototype.slice.apply(arguments).slice(1),  // 事件名以外的参数
+      listeners = this._listeners[eventName],  // 取出绑定的函数
+      self = this;   // 绑定 this
+
+  if (!Array.isArray(listeners)) return; // 如果没有绑定的函数，就走开
+  listeners.forEach(function (callback) {  // 事件执行
+    try {
+      cb.apply(this, args);  // 事件执行最好用 try catch 咯
+    } catch (e) {
+      console.error(e);
+    }
+  })
+}
+```
+
+6 事件如何派发也就是事件广播（dispatchEvent）,在高级程序设计中，说的模拟事件
+
+```js
+// ie
+// document 上添加一个 自定义事件
+document.attachEvent('onDataAvailable', function (event) {
+  alert(event.eventType);
+});
+
+var obj = document.getElementById('obj')
+// obj上元素绑定 click 事件
+obj.attachEvent('onclick', function ( event) {
+  alert(event.eventType);
+});
+
+// 调用 document 对象的 createEventObject 方法得到一个 event 的对象实例
+var event = document.createEventObject();
+event.eventType = 'message';
+document.fireEvent('ononDataAvailable', event);
+
+// 触发元素上的click事件
+document.getElementById('test').onclick = function () {
+  obj.fireEvent('onclick', event);
+};
+
+
+// w3c
+//document上绑定自定义事件ondataavailable
+document.addEventListener('ondataavailable', function (event) {
+    alert(event.eventType);
+}, false);
+var obj = document.getElementById("obj");
+//obj元素上绑定click事件
+obj.addEventListener('click', function (event) {
+    alert(event.eventType);
+}, false);
+//调用document对象的 createEvent 方法得到一个event的对象实例。
+var event = document.createEvent('HTMLEvents');
+// initEvent接受3个参数：
+// 事件类型，是否冒泡，是否阻止浏览器的默认行为
+event.initEvent("ondataavailable", true, true);
+event.eventType = 'message';
+//触发document上绑定的自定义事件ondataavailable
+document.dispatchEvent(event);
+var event1 = document.createEvent('HTMLEvents');
+event1.initEvent("click", true, true);
+event1.eventType = 'message';
+//触发obj元素上绑定click事件
+document.getElementById("test").onclick = function () {
+    obj.dispatchEvent(event1);
+};
+```
+
+关于闭包
+
+
+
+
+
+
+整理来自
+
 [未完](http://www.w3cmark.com/2016/439.html)
+
 [2016十家公司前端面试小记](http://www.cnblogs.com/xxcanghai/p/5205998.html)
