人家一个面试，我学了一天多了

--- a/JS/review-2016-11-23.md
+++ b/JS/review-2016-11-23.md
@@ -194,6 +194,31 @@ document.getElementById("test").onclick = function () {
 ```
 
 关于闭包
+```
+这个问题的经典性，几乎所有面试官都会问到这个问题，什么情况下会发生闭包，为什么需要闭包，什么场景下需要，闭包闭了谁，怎么释放被闭包的变量内存，闭包的优点是什么，缺点是什么等等。
+
+关于闭包，有的是上述提问，有的是直接做闭包面试题。关于概念网上一搜一大把，关于闭包面试题，可以参考我之前写过的一篇文章：大部分人都会做错的经典JS闭包面试题（http://www.cnblogs.com/xxcanghai/p/4991870.html）
+
+不夸张的讲，如果这篇文章完全弄懂了，基本上没有可以难住的闭包的题目了。
+```
+
+手写Function.bind函数
+
+核心几点:
+1. Function.bind返回的也是一个函数，所以注定发生了闭包，
+2. 在返回的这个函数中去调用一个其他的函数，这其实本质上就是函数钩子(HOOK)
+
+关于在JS里的函数钩子，我认为只需要维护以下三点即可：
+
+1. 保持函数的this指向
+- 保持函数的所有参数都传递到目标函数
+- 保持函数的返回值
+
+有了以上这几点，这个函数就非常好写了，下面是MSDN上的标准Polyfill：
+
+
+
+
 
 
 
