--- a/JS/review-2016-11-23.md
+++ b/JS/review-2016-11-23.md
@@ -216,7 +216,79 @@ document.getElementById("test").onclick = function () {
 
 有了以上这几点，这个函数就非常好写了，下面是MSDN上的标准Polyfill：
 
+```js
+if (!Function.prototype.bind) {
+  Function.prototype.bind = function (oThis) {
+    if (typeof this !== "function") {
+      // closest thing possible to the ECMAScript 5
+      // internal IsCallable function
+      throw new TypeError("Function.prototype.bind - what is tring to be bound is note callable");
+    }
 
+    // 这边开始
+    var aArgs = Array.prototype.slice.call(arguments, 1),  // 参数
+        fToBind = this,    // 指向函数本身
+        fNOP = function () {},
+        fBound = function () {
+          // console.log(this instanceof fNOP);           // 测试出来都是 false
+          // 返回闭包
+          console.log(this);  // window
+          return fToBind.apply(this instanceof fNOP    // 为什么要一个新函数的实例？这一句实在不懂，怎么会是他的实例
+                                  ? this
+                                  : oThis || this,
+                                aArgs.concat(Array.prototype.slice.call(arguments)));
+        };
+      if (this.prototype) {
+        // Function.prototype doesn't have a prototype property
+        fNOP.prototype = this.prototype;   // 用媒介，获取原来函数的 原型
+      }
+
+      // 上面的实例测试，是为了这一句吗
+      fBound.prototype = new fNOP();   // 这个和什么 设计模式很像，为什么不能直接等于原型
+      // console.log('this',this);
+
+      return fBound;
+  };
+}
+
+// 一般例子
+this.x = 9;
+var module = {
+  x: 81,
+  getX: function() {return this.x;}
+};
+
+// module.getX();  // 81，this 正常
+// console.log(module.getX());
+//
+// var retrieveX = module.getX;
+// retrieveX()  // this 绑定到了 全局作用域
+// console.log(retrieveX());
+
+var retrieveX = module.getX.bind(module);   // 绑定 this 指向 module,如果不绑定，就是指向 module.getX，而不是 module
+retrieveX()
+console.log(retrieveX());
+
+
+// 如果使用 es6 箭头函数就不会有这样的问题，失策，原来绑定的是外围的this
+this.x = 9;
+let module = {
+  x: 81,
+  getX: () => this.x,
+};
+module.getX() // 9
+
+var retrieveX = module.getX;
+retrieveX();  // 竟然是 9 ，为什么？
+var retrieveX = module.getX.bind(module);
+retrieveX();  // 还是 9 ，为什么，是绑定了，绑定了全局作用域了？
+
+// 测试
+var fToBind = this,
+    fNOP = function () {},
+```
+
+## 手写数组快速排序/去重
 
 
 
